objects/project_cloud__Project_Task_Dependency__c.object
<CustomObject>
    <description>System object representing a link between 2 project tasks. This object should be hidden from all users.</description>
    <fields>
        <fullName>project_cloud__Child__c</fullName>
        <description>M/D Relationship representing the child Project Task</description>
        <inlineHelpText>The child dependent project task</inlineHelpText>
        <label>Child Dependent</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Parent Dependencies</relationshipLabel>
        <relationshipName>Parent_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Display_Name__c</fullName>
        <formula>&quot;Parent: \&quot;&quot; &amp; project_cloud__Parent__r.Name &amp; &quot;\&quot; -&gt; Child: \&quot;&quot; &amp; project_cloud__Child__r.Name</formula>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hash__c</fullName>
        <formula>CASESAFEID(project_cloud__Parent__c) &amp; CASESAFEID(project_cloud__Child__c)</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Increment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used by the stack as a member variable of the Object to determine how far to move the Parent End Date. At the end of processing the value should always be 0</description>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parent_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parent_End__c</fullName>
        <description>This is the key field in the calculations of the cascading dependency updates. This field should never be updated by the user it is updated by the triggers. At all times it will be the same value as Parent Project Task&apos;s Calculated End Date + the parents Non Working End value</description>
        <inlineHelpText>This is a system field and should never be visible or modified.</inlineHelpText>
        <label>Parent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>L/U Relationship representing the parent Project Task. Would have been preferable to have a second M/D but this is prevented by Salesforce. The help text on this field is used by the new project wizard</description>
        <inlineHelpText>Input the row numbers of any preceding project tasks that you wish to make this task dependent upon. (Note these numbers will be recalculated automatically as the project tasks are resorted into date order)</inlineHelpText>
        <label>Dependent Upon</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Child Dependencies</relationshipLabel>
        <relationshipName>Child_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Task Dependency</label>
    <nameField>
        <displayFormat>PTD-{0000000000}</displayFormat>
        <label>Project Task Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__Dependency_in_Same_Project</fullName>
        <active>true</active>
        <description>Make sure the dependency junction Object is making a link between 2 tasks in the same project phase</description>
        <errorConditionFormula>project_cloud__Child__r.project_cloud__Project_Phase__r.project_cloud__Project__r.Id != project_cloud__Parent__r.project_cloud__Project_Phase__r.project_cloud__Project__r.Id</errorConditionFormula>
        <errorMessage>Dependencies between Projects Tasks in different Projects are currently not supported</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Dependents_Read_Only</fullName>
        <active>true</active>
        <description>The Parent Dependent Lookup field is read only. I.e once the lookup is created it cannot be modified to point to another object</description>
        <errorConditionFormula>ISCHANGED(project_cloud__Parent__c) || ISCHANGED(project_cloud__Child__c)</errorConditionFormula>
        <errorMessage>The Parent and Child relationships cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Increment_Always_Zero</fullName>
        <active>true</active>
        <description>The increment field is a system field for calculating the parent end date, after calculation it should always be 0 to prevent future calculations being compromised.</description>
        <errorConditionFormula>ISBLANK(project_cloud__Increment__c) || project_cloud__Increment__c != 0</errorConditionFormula>
        <errorDisplayField>project_cloud__Increment__c</errorDisplayField>
        <errorMessage>Increment must always be 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__No_Self_Relationships</fullName>
        <active>true</active>
        <description>Prevent the creation of a dependency with the same Parent and child</description>
        <errorConditionFormula>project_cloud__Parent__c = project_cloud__Child__c</errorConditionFormula>
        <errorMessage>This Dependency cannot be created it will create a circular (self) relationship</errorMessage>
    </validationRules>
</CustomObject>